@@ -1,4 +1,5 @@
 v 1.3.2
+	#101 - Size of a request header field exceeds server limit for datatables.
 	#97 - Add new method and functionality - unset_jquery_ui
 	#46 - Supporting IE7.
 	#95 - Export and print doesn't remove the html tags.
